[gd_scene load_steps=12 format=3 uid="uid://cbcspoq3c0o5o"]

[ext_resource type="Texture2D" uid="uid://bxki7hg0b0110" path="res://assets/enemy_saucer.png" id="1_2mvqj"]
[ext_resource type="Script" uid="uid://ji63cmkc1tgk" path="res://enemy/enemy.gd" id="1_p200p"]
[ext_resource type="PackedScene" uid="uid://dokgdyddybloq" path="res://enemy/enemy_bullet.tscn" id="2_pmsee"]
[ext_resource type="PackedScene" uid="uid://baot63qqxam6j" path="res://enemy/enemy_paths.tscn" id="2_ppra6"]
[ext_resource type="PackedScene" uid="uid://csotou1xxlcjq" path="res://rocks/explosion.tscn" id="3_p200p"]
[ext_resource type="AudioStream" uid="uid://bwdj6f317tid1" path="res://assets/sounds/enemy_laser.wav" id="6_y5vj3"]
[ext_resource type="AudioStream" uid="uid://bmyyfvou1jeit" path="res://assets/sounds/explosion.wav" id="7_5ffra"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ofsxj"]
radius = 36.013885

[sub_resource type="Animation" id="Animation_1wwld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pmsee"]
resource_name = "flash"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.04, 0.08, 0.12, 0.16),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.6784314, 0, 0, 1), Color(1, 1, 1, 1), Color(0.6784314, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y5vj3"]
_data = {
&"RESET": SubResource("Animation_1wwld"),
&"flash": SubResource("Animation_pmsee")
}

[node name="Enemy" type="Area2D" groups=["enemies"]]
process_mode = 1
script = ExtResource("1_p200p")
bullet_scene = ExtResource("2_pmsee")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2mvqj")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ofsxj")

[node name="EnemyPaths" parent="." instance=ExtResource("2_ppra6")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemyPaths")
libraries = {
&"": SubResource("AnimationLibrary_y5vj3")
}

[node name="Explosion" parent="." instance=ExtResource("3_p200p")]

[node name="GunCoolDown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y5vj3")
volume_db = -5.0
pitch_scale = 3.0

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5ffra")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunCoolDown" to="." method="_on_gun_cool_down_timeout"]
